# passchain

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
src/: errors.rs  lib.rs  main.rs  test.rs
src/cli/: create.rs  keyscript.rs  mod.rs
src/config/: mod.rs
src/modules/: fido.rs  mod.rs
src/utils/: b64.rs  base_x.rs  hash.rs  keyscript.rs  mod.rs
