[package]
name = "passchain"
version = "0.1.0"
edition = "2021"
description = "Multi-factor authentication for LUKS"
authors = ["sbchild <sbchild0@gmail.com>"]
repository = "https://github.com/sb-child/passchain"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
toml = { version = "*" }
thiserror = { version = "*" }
anyhow = { version = "*", features = ["backtrace"] }
tokio = { version = "*", features = ["full"] }
inquire = { version = "0.7.5", features = ["date"] }
strum = { version = "0.26", features = ["derive"] }
chrono = "*"
ctap-hid-fido2 = "3.5.1"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = { version = "0.5.3", features = ["zeroize"] }
rand = "*"
ring = "*"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
hex = "*"
base64 = "*"
entropy = "0.4.2"
itertools = "*"
futures = "*"
tracing-indicatif = "0.3.6"

[profile.dev.package."argon2"]
opt-level = 3
debug = false
codegen-units = 1
strip = true

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
codegen-units = 1
strip = true
