[package]
name = "passchain"
version = "0.1.0"
edition = "2021"
description = "Multi-factor authentication for LUKS"
authors = ["sbchild <sbchild0@gmail.com>"]
repository = "https://github.com/sb-child/passchain"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
notify = { version = "*", features = ["serde"] }
toml = { version = "*" }
thiserror = { version = "*" }
anyhow = { version = "*", features = ["backtrace"] }
tokio = { version = "*", features = ["full"] }
inquire = { version = "0.7.5", features = ["date"] }
strum = { version = "0.26", features = ["derive"] }
ctap-hid-fido2 = { git = "https://github.com/sb-child/ctap-hid-fido2", branch = "master" }
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = { version = "0.5.3", features = ["zeroize"] }
ring = "*"
indicatif = "0.17.8"
base64 = "*"
entropy = "0.4.2"
futures = "*"
tracing-indicatif = "0.3.6"
ratatui = "0.28.1"

[profile.dev.package."argon2"]
opt-level = 3
debug = false
codegen-units = 1
strip = true

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"
codegen-units = 1
strip = true
